# rapidhash

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README-DEV.md  README.md
.github/workflows/: crates.yaml  rust.yaml
benches/: basic.rs  bench.rs  compiled.rs  hashmap.rs  int.rs  object.rs  quality.rs  rng.rs  string.rs  vector.rs
docs/: generate_charts.py
examples/: charts.rs  cli.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: rapidhash.rs  rapidhasher.rs
fuzz/in/: case2
fuzz/src/: afl_rapidhash.rs
src/: hasher.rs  lib.rs  random.rs  random_state.rs  rapid.rs  rapid_const.rs  rapid_hasher.rs  rapid_hasher_inline.rs  rapid_hybrid.rs  rng.rs
