[package]
name = "rapidhash"
version = "0.1.0"
edition = "2021"

[lib]

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
fxhash = "0.2.1"
t1ha = "0.1.2"
wyhash = "0.5.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
metrohash = "1.0.6"
seahash = "4.1.0"
