[package]
name = "rapidhash"
version = "0.1.0"
edition = "2021"
authors = ["Liam Gray <gmail@liamg.me>"]
description = "A rust port of rapidhash: an extremely fast, high quality, platform-independent hashing algorithm."
repository = "https://github.com/hoxxep/rapidhash"
documentation = "https://docs.rs/rapidhash"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hash", "rapidhash"]
categories = ["algorithms", "no-std"]
exclude = ["Cargo.lock", ".github"]

[lib]

[[bench]]
name = "bench"
harness = false

# Test docs using cargo-docs. Command:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly docs -- --all-feature
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []  # enable std library for RapidHashMap and RapidHashSet helpers
rand = ["dep:rand"]  # enable the rand library for random seed initialisation
unsafe = []  # enable unsafe pointer arithmetic to skip unnecessary bounds checks

[dependencies]
rand = { version = "0.8.5", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
fxhash = "0.2.1"
t1ha = "0.1.2"
wyhash = "0.5.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
metrohash = "1.0.6"
seahash = "4.1.0"
ahash = "0.8.11"
